--- a/app/src/main/res/layout/activity_media_report.xml
+++ b/app/src/main/res/layout/activity_media_report.xml
@@ -35,7 +35,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#4E4B66"
-            android:text="Medya Raporu"/>
+            android:text="Haber Servisi"/>
 
         <androidx.cardview.widget.CardView
             android:visibility="visible"
