--- a/app/src/main/res/layout/activity_newspaper.xml
+++ b/app/src/main/res/layout/activity_newspaper.xml
@@ -36,7 +36,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#4E4B66"
-            android:text="Gazeteler"/>
+            android:text="Gazete Manşetleri"/>
 
         <androidx.cardview.widget.CardView
             android:visibility="visible"
