--- a/app/src/main/res/layout/activity_sub_internet.xml
+++ b/app/src/main/res/layout/activity_sub_internet.xml
@@ -32,7 +32,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="start|center_vertical"
+            android:gravity="center"
             android:text="İnternet"
             android:textColor="#16456F"
             android:textSize="20sp" />
@@ -88,7 +88,7 @@
             android:paddingVertical="10dp"
             android:background="@color/white"
             android:id="@+id/tumSayfa"
-            android:gravity="end"
+            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Sayfayı Gör"
