--- a/app/src/main/res/layout/activity_magazine.xml
+++ b/app/src/main/res/layout/activity_magazine.xml
@@ -35,7 +35,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#4E4B66"
-            android:text="Dergiler"/>
+            android:text="Dergi Kapakları"/>
 
         <androidx.cardview.widget.CardView
             android:visibility="invisible"
