--- a/app/src/main/res/layout/activity_media_agenda.xml
+++ b/app/src/main/res/layout/activity_media_agenda.xml
@@ -39,10 +39,10 @@
                 android:layout_weight="1"
                 android:textSize="20sp"
                 android:textColor="#4E4B66"
-                android:text="Medya Gündemi"/>
+                android:text="Türkiye Gündemi"/>
 
             <androidx.cardview.widget.CardView
-                android:visibility="visible"
+                android:visibility="invisible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
