--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -9,6 +9,7 @@
     tools:context=".activity.NotificationActivity">
 
     <LinearLayout
+        android:layout_marginVertical="20dp"
         android:id="@+id/test12"
         android:layout_marginTop="0dp"
         android:paddingHorizontal="0dp"
