--- a/app/src/main/res/layout/activity_selim.xml
+++ b/app/src/main/res/layout/activity_selim.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:layoutDirection="ltr"
-    tools:context=".activity.SubNewspaperActivity">
+    tools:context=".activity.SelimActivity">
 
     <com.example.mtm.util.ZoomClass
         android:layout_gravity="center"
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -60,8 +60,8 @@
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#33FFFFFF"
+        android:layout_height="60dp"
+        android:background="#80FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" >
@@ -72,8 +72,8 @@
                 android:id="@+id/leftArrowImageView"
                 android:padding="15dp"
                 android:layout_gravity="center_vertical"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:src="@drawable/left_arrow"
                 app:tint="@color/black"
                 tools:ignore="RtlSymmetry" />
@@ -92,8 +92,8 @@
                 android:id="@+id/rightArrowImageView"
                 android:padding="15dp"
                 android:layout_gravity="center_vertical"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:src="@drawable/right_arrow"
                 app:tint="@color/black"
                 tools:ignore="RtlSymmetry" />
