--- a/app/src/main/res/layout/grid_view_columnist_activity.xml
+++ b/app/src/main/res/layout/grid_view_columnist_activity.xml
@@ -55,18 +55,38 @@
                         android:ellipsize="end" />
 
 
-                    <TextView
-                        android:id="@+id/journalistNameTextView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                    <LinearLayout
                         android:layout_gravity="start"
                         android:layout_marginTop="8dp"
-                        android:ellipsize="end"
-                        android:maxLines="3"
-                        android:textStyle="bold"
-                        android:text="Test"
-                        android:textColor="#16456F"
-                        android:textSize="13sp" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/journalistNameTextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            android:maxLines="3"
+                            android:textStyle="bold"
+                            android:text="Test"
+                            android:textColor="#16456F"
+                            android:textSize="13sp" />
+
+                        <TextView
+                            android:layout_marginStart="5dp"
+                            android:layout_marginBottom="0dp"
+                            android:textSize="9sp"
+                            android:id="@+id/positionTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="/sf.1"
+                            android:layout_gravity="bottom"
+                            android:textColor="#000000"/>
+
+                    </LinearLayout>
+
+
 
                 </LinearLayout>
 
