--- a/app/src/main/res/layout/web_view_layout.xml
+++ b/app/src/main/res/layout/web_view_layout.xml
@@ -38,7 +38,7 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:visibility="invisible"
+        android:visibility="visible"
         android:background="#CC000000"
         android:id="@+id/test12"
         android:layout_width="match_parent"
@@ -86,7 +86,7 @@
 
 
     <LinearLayout
-        android:visibility="invisible"
+        android:visibility="visible"
         android:id="@+id/test3"
         android:background="#CC000000"
         android:layout_width="match_parent"
