--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -68,7 +68,8 @@
     </style>
 
     <style name="date_text_appearance2" parent="@style/TextAppearance.AppCompat">
-        <item name="android:visibility">gone</item>
+        <item name="android:visibility">visible</item>
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
 
