--- a/app/src/main/res/layout/activity_mesut3.xml
+++ b/app/src/main/res/layout/activity_mesut3.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".activity.Mesut2Activity">
+    tools:context=".activity.Mesut3Activity">
 
 
 
@@ -128,6 +128,7 @@
 
 
         <TextView
+            android:visibility="gone"
             android:layout_gravity="center_vertical|end"
             android:id="@+id/tumSayfa"
             android:layout_width="0dp"
@@ -139,7 +140,7 @@
             android:textSize="13sp"/>
 
         <ImageView
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_marginVertical="10dp"
             android:id="@+id/cancel"
             android:layout_width="0dp"
