--- a/app/src/main/res/layout/grid_view_media_report_activity.xml
+++ b/app/src/main/res/layout/grid_view_media_report_activity.xml
@@ -19,6 +19,7 @@
         android:layout_height="match_parent">
 
         <TextView
+            android:visibility="gone"
             android:layout_marginStart="20dp"
             android:textSize="13sp"
             android:id="@+id/date"
@@ -32,6 +33,7 @@
 
 
         <View
+            android:visibility="gone"
             android:layout_width="40dp"
             android:layout_height="0dp"/>
 
